@@ -5,6 +5,9 @@ bound on the queue size; b) the builder now has an option to turn off background
 default to flushing remaining puts when closed - this can be controlled in the builder via
 finalFlushTime().
 
+* Issue 82: Generalized (and deprecated) nonNamespaceView() by adding the usingNamespace() method
+to allow getting a facade of the client that uses a specified namespace.
+
 1.1.12/1.0.13 - June 5, 2012
 ============================
 * Pull Request 81: Avoid invalid ipv6 localhost addresses
